--- a/uni70/source/data/unidata/changes.txt
+++ b/uni70/source/data/unidata/changes.txt
@@ -13,18 +13,29 @@
 
 ---------------------------------------------------------------------------- ***
 
-Unicode 7.0 update for ICU 53
+Unicode 7.0 update for ICU 54
 
 http://www.unicode.org/review/pri271/  -- beta review
 http://www.unicode.org/reports/uax-proposed-updates.html
 http://www.unicode.org/versions/beta-7.0.0.html#notable_issues
 http://www.unicode.org/reports/tr44/tr44-13.html
 
+* Issues:
+- PVA.txt lists @missing before alias mappings, has gc=Unassigned but want gc=Cn
+  + current workaround: changed to gc=Cn in PVA.txt
+- mark ppucd.txt as UTF-8 because of non-ASCII comments? or modify comments?
+  + need to change test code?
+
 *** ICU Trac
 
 - ticket 10821: Unicode 7.0, UCA 7.0
 - C++ branches/markus/uni70 at r35584 from trunk at r35580
-- Java branches/markus/uni70 at r?? from trunk at r??
+- Java branches/markus/uni70 at r35587 from trunk at r35545
+
+*** CLDR Trac
+
+- ticket 7195: UCA 7.0 CLDR root collation
+- ticket 6762: script metadata for Unicode 7.0 new scripts
 
 *** Unicode version numbers
 - makedata.mak
@@ -42,63 +53,145 @@ http://www.unicode.org/reports/tr44/tr44-13.html
 - download UCD, UCA & IDNA files
 - make sure that the Unicode data folder passed into preparseucd.py
   includes a copy of the latest IdnaMappingTable.txt (can be in some subfolder)
-- modify preparseucd.py:
-  parse new file BidiBrackets.txt
-  with new properties bpb=Bidi_Paired_Bracket and bpt=Bidi_Paired_Bracket_Type
-- ~/svn.icutools/trunk/src/unicode$ py/preparseucd.py ~/unidata/uni70/20130425 ~/svn.icu/uni70/src ~/svn.icutools/trunk/src
+- only for manual diffs: remove version suffixes from the file names
+  ~/unidata/uni70/20140403$ ../../desuffixucd.py .
+  (see https://sites.google.com/site/unicodetools/inputdata)
+- only for manual diffs: extract Unihan.zip to "here" (.../ucd/Unihan/*.txt), delete Unihan.zip
+- ~/svn.icutools/trunk/src/unicode$ py/preparseucd.py ~/unidata/uni70/20140403 ~/svn.icu/uni70/src ~/svn.icutools/trunk/src
 - This writes files (especially ppucd.txt) to the ICU4C unidata and testdata subfolders.
-- Check test file diffs for previously commented-out, known-failing data lines;
-  probably need to keep those commented out.
 
-* PropertyAliases.txt changes
-- 1 new Enumerated Property
-  bpt                      ; Bidi_Paired_Bracket_Type
-  -> uchar.h & UProperty.java & UCharacter.BidiPairedBracketType
-  -> ubidi_props.h & .c & UBiDiProps.java
-  -> remember to write the max value at UBIDI_MAX_VALUES_INDEX
-  -> uprops.cpp
-  -> change ubidi.icu format version from 2.0 to 2.1
-- 1 new Miscellaneous Property
-  bpb                      ; Bidi_Paired_Bracket
-  -> uchar.h & UProperty.java
-  -> ppucd.h & .cpp
+* initial preparseucd.py changes
+- remove new Unicode scripts from the
+  only-in-ISO-15924 list according to the error message:
+    ValueError: remove ['Hmng', 'Lina', 'Perm', 'Mani', 'Phlp', 'Bass',
+                        'Dupl', 'Elba', 'Gran', 'Mend', 'Narb', 'Nbat', 'Palm',
+                        'Sind', 'Wara', 'Mroo', 'Khoj', 'Tirh', 'Aghb', 'Mahj']
+    from _scripts_only_in_iso15924
+  -> fix expectedLong names in cucdapi.c/TestUScriptCodeAPI()
+      and in com.ibm.icu.dev.test.lang.TestUScript.java
 
 * PropertyValueAliases.txt changes
-- 3 Bidi_Paired_Bracket_Type (bpt) values:
-  bpt; c                                ; Close
-  bpt; n                                ; None
-  bpt; o                                ; Open
-  -> uchar.h & UCharacter.BidiPairedBracketType
-  -> ubidi_props.h & .c & UBiDiProps.java
-  -> change ubidi.icu format version from 2.0 to 2.1
-- 4 new Bidi_Class (bc) values:
-  bc ; FSI                              ; First_Strong_Isolate
-  bc ; LRI                              ; Left_To_Right_Isolate
-  bc ; RLI                              ; Right_To_Left_Isolate
-  bc ; PDI                              ; Pop_Directional_Isolate
-  -> uchar.h & UCharacterEnums.ECharacterDirection
-  -> until the bidi code gets updated,
-     Roozbeh suggests mapping the new bc values to ON (Other_Neutral)
-- 3 new Word_Break (WB) values:
-  WB ; HL                               ; Hebrew_Letter
-  WB ; SQ                               ; Single_Quote
-  WB ; DQ                               ; Double_Quote
-  -> uchar.h & UCharacter.WordBreak
-  -> first time Word_Break numeric constants exceed 4 bits (now 17 values)
-- 2 new script codes from ISO 15924 http://www.unicode.org/iso15924/codechanges.html
-  (added 2012-10-16)
-  Aghb  239     Caucasian Albanian
-  Mahj  314     Mahajani
-  ** see http://bugs.icu-project.org/trac/ticket/9991 "new script codes for ICU 53"
-  -> uscript.h
+- 32 new Block (blk) values:
+    blk; Bassa_Vah                        ; Bassa_Vah
+    blk; Caucasian_Albanian               ; Caucasian_Albanian
+    blk; Coptic_Epact_Numbers             ; Coptic_Epact_Numbers
+    blk; Diacriticals_Ext                 ; Combining_Diacritical_Marks_Extended
+    blk; Duployan                         ; Duployan
+    blk; Elbasan                          ; Elbasan
+    blk; Geometric_Shapes_Ext             ; Geometric_Shapes_Extended
+    blk; Grantha                          ; Grantha
+    blk; Khojki                           ; Khojki
+    blk; Khudawadi                        ; Khudawadi
+    blk; Latin_Ext_E                      ; Latin_Extended_E
+    blk; Linear_A                         ; Linear_A
+    blk; Mahajani                         ; Mahajani
+    blk; Manichaean                       ; Manichaean
+    blk; Mende_Kikakui                    ; Mende_Kikakui
+    blk; Modi                             ; Modi
+    blk; Mro                              ; Mro
+    blk; Myanmar_Ext_B                    ; Myanmar_Extended_B
+    blk; Nabataean                        ; Nabataean
+    blk; Old_North_Arabian                ; Old_North_Arabian
+    blk; Old_Permic                       ; Old_Permic
+    blk; Ornamental_Dingbats              ; Ornamental_Dingbats
+    blk; Pahawh_Hmong                     ; Pahawh_Hmong
+    blk; Palmyrene                        ; Palmyrene
+    blk; Pau_Cin_Hau                      ; Pau_Cin_Hau
+    blk; Psalter_Pahlavi                  ; Psalter_Pahlavi
+    blk; Shorthand_Format_Controls        ; Shorthand_Format_Controls
+    blk; Siddham                          ; Siddham
+    blk; Sinhala_Archaic_Numbers          ; Sinhala_Archaic_Numbers
+    blk; Sup_Arrows_C                     ; Supplemental_Arrows_C
+    blk; Tirhuta                          ; Tirhuta
+    blk; Warang_Citi                      ; Warang_Citi
+  -> add to uchar.h
+    use long property names for enum constants
+  -> add to UCharacter.UnicodeBlock IDs
+    Eclipse find     UBLOCK_([^ ]+) = ([0-9]+), (/.+)
+            replace  public static final int \1_ID = \2; \3
+  -> add to UCharacter.UnicodeBlock objects
+    Eclipse find     UBLOCK_([^ ]+) = [0-9]+, (/.+)
+            replace  public static final UnicodeBlock \1 = new UnicodeBlock("\1", \1_ID); \2
+- 28 new Joining_Group (jg) values:
+    jg ; Manichaean_Aleph                 ; Manichaean_Aleph
+    jg ; Manichaean_Ayin                  ; Manichaean_Ayin
+    jg ; Manichaean_Beth                  ; Manichaean_Beth
+    jg ; Manichaean_Daleth                ; Manichaean_Daleth
+    jg ; Manichaean_Dhamedh               ; Manichaean_Dhamedh
+    jg ; Manichaean_Five                  ; Manichaean_Five
+    jg ; Manichaean_Gimel                 ; Manichaean_Gimel
+    jg ; Manichaean_Heth                  ; Manichaean_Heth
+    jg ; Manichaean_Hundred               ; Manichaean_Hundred
+    jg ; Manichaean_Kaph                  ; Manichaean_Kaph
+    jg ; Manichaean_Lamedh                ; Manichaean_Lamedh
+    jg ; Manichaean_Mem                   ; Manichaean_Mem
+    jg ; Manichaean_Nun                   ; Manichaean_Nun
+    jg ; Manichaean_One                   ; Manichaean_One
+    jg ; Manichaean_Pe                    ; Manichaean_Pe
+    jg ; Manichaean_Qoph                  ; Manichaean_Qoph
+    jg ; Manichaean_Resh                  ; Manichaean_Resh
+    jg ; Manichaean_Sadhe                 ; Manichaean_Sadhe
+    jg ; Manichaean_Samekh                ; Manichaean_Samekh
+    jg ; Manichaean_Taw                   ; Manichaean_Taw
+    jg ; Manichaean_Ten                   ; Manichaean_Ten
+    jg ; Manichaean_Teth                  ; Manichaean_Teth
+    jg ; Manichaean_Thamedh               ; Manichaean_Thamedh
+    jg ; Manichaean_Twenty                ; Manichaean_Twenty
+    jg ; Manichaean_Waw                   ; Manichaean_Waw
+    jg ; Manichaean_Yodh                  ; Manichaean_Yodh
+    jg ; Manichaean_Zayin                 ; Manichaean_Zayin
+    jg ; Straight_Waw                     ; Straight_Waw
+  -> uchar.h & UCharacter.JoiningGroup
+- 23 new Script (sc) values:
+    sc ; Aghb                             ; Caucasian_Albanian
+    sc ; Bass                             ; Bassa_Vah
+    sc ; Dupl                             ; Duployan
+    sc ; Elba                             ; Elbasan
+    sc ; Gran                             ; Grantha
+    sc ; Hmng                             ; Pahawh_Hmong
+    sc ; Khoj                             ; Khojki
+    sc ; Lina                             ; Linear_A
+    sc ; Mahj                             ; Mahajani
+    sc ; Mani                             ; Manichaean
+    sc ; Mend                             ; Mende_Kikakui
+    sc ; Modi                             ; Modi
+    sc ; Mroo                             ; Mro
+    sc ; Narb                             ; Old_North_Arabian
+    sc ; Nbat                             ; Nabataean
+    sc ; Palm                             ; Palmyrene
+    sc ; Pauc                             ; Pau_Cin_Hau
+    sc ; Perm                             ; Old_Permic
+    sc ; Phlp                             ; Psalter_Pahlavi
+    sc ; Sidd                             ; Siddham
+    sc ; Sind                             ; Khudawadi
+    sc ; Tirh                             ; Tirhuta
+    sc ; Wara                             ; Warang_Citi
+  -> uscript.h (many were added before)
+    comment "Mende Kikakui" for USCRIPT_MENDE
+    add USCRIPT_KHUDAWADI, make USCRIPT_SINDHI an alias
   -> com.ibm.icu.lang.UScript
     find     USCRIPT_([^ ]+) *= ([0-9]+),(.+)
-    replace  public static final int \1 = \2;\3
-  -> preparseucd.py _scripts_only_in_iso15924
+    replace  public static final int \1 = \2; \3
+- 6 new script codes from ISO 15924 http://www.unicode.org/iso15924/codechanges.html
+  (added 2012-11-01)
+    Ahom        338     Ahom
+    Hatr        127     Hatran
+    Mult        323     Multani
+  (added 2013-10-12)
+    Modi        324     Modi
+    Pauc        263     Pau Cin Hau
+    Sidd        302     Siddham
+  -> uscript.h (some overlap with additions from Unicode)
+  -> com.ibm.icu.lang.UScript
+    find     USCRIPT_([^ ]+) *= ([0-9]+),(.+)
+    replace  public static final int \1 = \2; \3
+  -> add Ahom, Hatr, Mult to preparseucd.py _scripts_only_in_iso15924
   -> add to expectedLong and expectedShort names in cintltst/cucdapi.c/TestUScriptCodeAPI()
       and in com.ibm.icu.dev.test.lang.TestUScript.java
-  -> update Script metadata: SCRIPT_PROPS[] in uscript_props.cpp & UScript.ScriptMetadata
-     (not strictly necessary for NOT_ENCODED scripts)
+
+* update Script metadata: SCRIPT_PROPS[] in uscript_props.cpp & UScript.ScriptMetadata
+    (not strictly necessary for NOT_ENCODED scripts)
+  ~/svn.icutools/trunk/src/unicode$ py/parsescriptmetadata.py ~/svn.icu/uni70/src/source/common/unicode/uscript.h ~/svn.cldr/trunk/common/properties/scriptMetadata.txt
 
 * generate normalization data files
 - ~/svn.icu/uni70/dbg$ export LD_LIBRARY_PATH=~/svn.icu/uni70/dbg/lib
