--- a/icu/branches/markus/uni70/source/data/unidata/changes.txt
+++ b/icu/branches/markus/uni70/source/data/unidata/changes.txt
@@ -237,14 +237,36 @@ set(ICU_SRC_DIR /home/mscherer/svn.icu/uni70/src)
 
 ~/svn.icu/uni70/src
 - rebuild ICU (make install) & tools
-- run genuca again (see step above) so that it picks up the new case mappings and nfc.nrm
+- run genuca again (see step above) so that it picks up the new nfc.nrm
 - rebuild ICU (make install) & tools
 
 * update uts46test.cpp and UTS46Test.java if there are new characters that are equivalent to
   sequences with non-LDH ASCII (that is, their decompositions contain '=' or similar)
 - grep IdnaMappingTable.txt or uts46.txt for "disallowed_STD3_valid" on non-ASCII characters
-- Unicode 6.0..6.3: U+2260, U+226E, U+226F
-- nothing new in 6.3, no test file to update
+- Unicode 6.0..7.0: U+2260, U+226E, U+226F
+- nothing new in 7.0, no test file to update
+
+* run & fix ICU4C tests
+
+| ***     FAILING TEST SUMMARY FOR:              intltest  
+         TestPropertySet
+      UnicodeSetTest
+   utility
+         TestUnicodeFiles
+      RBBITest
+   rbbi
+| *** END FAILING TEST SUMMARY FOR:              intltest
+-------------
+| ***     FAILING TEST SUMMARY FOR:              cintltst  
+/tsutil/cucdtst/TestAdditionalProperties
+/tsutil/cucdtst/TestUScriptCodeAPI
+/tscoll/capitst/TestProperty
+/tscoll/cmsccoll/TestComposeDecompose
+| *** END FAILING TEST SUMMARY FOR:              cintltst
+-------------
+| ***     FAILING TEST SUMMARY FOR:              letest  
+/api/ScriptTest
+| *** END FAILING TEST SUMMARY FOR:              letest
 
 * update Java data files
 - refresh just the UCD-related files, just to be safe
@@ -280,6 +302,8 @@ set(ICU_SRC_DIR /home/mscherer/svn.icu/uni70/src)
 
 * refresh Java test .txt files
 - copy new .txt files into ICU4J's main/tests/core/src/com/ibm/icu/dev/data/unicode
+
+* run & fix ICU4J tests
 
 * API additions
 - send notice to icu-design about new born-@stable API (enum constants etc.)
