--- a/icu/branches/markus/uni70/source/data/unidata/changes.txt
+++ b/icu/branches/markus/uni70/source/data/unidata/changes.txt
@@ -102,6 +102,7 @@ http://www.unicode.org/reports/tr44/tr44-13.html
 - only for manual diffs: extract Unihan.zip to "here" (.../ucd/Unihan/*.txt), delete Unihan.zip
 - ~/svn.icutools/trunk/src/unicode$ py/preparseucd.py ~/unidata/uni70/20140403 ~/svn.icu/uni70/src ~/svn.icutools/trunk/src
 - This writes files (especially ppucd.txt) to the ICU4C unidata and testdata subfolders.
+- Restore ICU patches for ticket #10176 in source/test/testdata/LineBreakTest.txt
 
 * initial preparseucd.py changes
 - remove new Unicode scripts from the
@@ -301,7 +302,6 @@ set(ICU_SRC_DIR /home/mscherer/svn.icu/uni70/src)
 | ***     FAILING TEST SUMMARY FOR:              cintltst  
 /tsutil/cucdtst/TestAdditionalProperties
 /tsutil/cucdtst/TestUScriptCodeAPI
-/tscoll/cmsccoll/TestEquivalentReorderingScripts
 | *** END FAILING TEST SUMMARY FOR:              cintltst
 -------------
 | ***     FAILING TEST SUMMARY FOR:              letest  
@@ -345,6 +345,23 @@ set(ICU_SRC_DIR /home/mscherer/svn.icu/uni70/src)
 - copy new .txt files into ICU4J's main/tests/core/src/com/ibm/icu/dev/data/unicode
 
 * run & fix ICU4J tests
+
+Error summary:
+ICU/Collate/Collator/CollationIteratorTest/TestNormalizedUnicodeChar
+ICU/Collate/Collator/CollationMiscTest/TestEquivalentReorderingScripts
+ICU/Collate/Collator/CollationMiscTest/TestUCARules
+ICU/Collate/Collator/CollationTest/TestShortFCDData
+ICU/Collate/Collator/UCAConformanceTest/TestTableNonIgnorable
+ICU/Collate/Collator/UCAConformanceTest/TestTableShifted
+ICU/Core/Property/TestCharacter/UCharacterTest/TestAdditionalProperties
+ICU/Core/Property/TestCharacter/UCharacterTest/TestUnicodeData
+ICU/Core/Property/TestUScript/TestNewCode
+ICU/Core/Property/UnicodeSetTest/TestPropertySet
+ICU/Core/Property/UnicodeSetTest/TestToPattern
+ICU/Core/SpoofChecker/SpoofCheckerTest/TestOpenFromSourceRules
+
+
+<< 425 TEST(S) FAILED >>
 
 * API additions
 - send notice to icu-design about new born-@stable API (enum constants etc.)
@@ -403,12 +420,15 @@ or
   in the working directory.
   (It also generates ScriptRunData.cpp, which is no longer needed.)
 
-  The generated files have a current copyright date and "@draft" statement.
+  The generated files have a current copyright date and "@stable" statement.
+  ICU 54: Fixed tools/misc/src/com/ibm/icu/dev/tool/layout/ScriptIDModuleWriter.java
+  for "born stable" Unicode API constants, and to stop parsing ICU version numbers
+  which may not contain dots any more.
 
 - diff current <icu>/source/layout files vs. generated ones
-    ~/svn.icu4j/trunk/src$ kdiff3 ~/svn.icu/trunk/src/source/layout tools/misc/src/com/ibm/icu/dev/tool/layout
+    ~/svn.icu4j/trunk/src$ meld ~/svn.icu/uni70/src/source/layout tools/misc/src/com/ibm/icu/dev/tool/layout
   review and manually merge desired changes;
-  fix gratuitous changes, incorrect @draft and missing aliases;
+  fix gratuitous changes, incorrect @draft/@stable and missing aliases;
   Unicode-derived script codes should be "born stable" like constants in uchar.h, uscript.h etc.
 - if you just copy the above files, then
   fix mixed line endings, review the diffs as above and restore changes to API tags etc.;
